--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.5",
+    "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.3"
   },
